# epistemic-challenge-curves

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
paper/: README.md  main.tex  references.bib
provenance/: README.md  verify_snapshot.py
provenance/original-v0.1/: .gitignore  ADJUDICATOR_AMENDMENT_V0_2.md  ADJUDICATOR_FREEZE.json  ADJUDICATOR_FREEZE_V0_2.json  BENCHMARK_SPEC.md  HOLDOUT_FREEZE.json  HOLDOUT_PLAN.md  MODEL_EXTENSION_AMENDMENT_V0_2.md  MODEL_EXTENSION_AMENDMENT_V0_3.md  MODEL_EXTENSION_FREEZE.json  MODEL_EXTENSION_FREEZE_V0_2.json  MODEL_EXTENSION_FREEZE_V0_3.json  MODEL_EXTENSION_PLAN.md  README.md  REPLICATION_FREEZE.json  REPLICATION_PLAN.md  RUN_MANIFEST.md  SOURCE_AUDIT.md  adjudicate_splits.py  adjudicate_splits_high_ceiling.py  analyze_model_panel.py  analyze_results.py  automated_scoring.py  build_holdout_inventory.py  build_holdout_report.py  build_model_extension_report.py  build_replication_report.py  build_report_artifact.py  combine_replication.py  epistemic_challenge.py  holdout_challenge.py  pyproject.toml  summarize_holdout.py  summarize_model_extension.py  summarize_replication.py  validate_holdout_logs.py  validate_model_extension.py
provenance/original-v0.1/logs/module-a-smoke-v0.1-final/: 2026-07-14T15-27-45-00-00_epistemic-challenge_ahc84AmSqcr4DVUxfvUdo4.eval  2026-07-14T15-27-45-00-00_epistemic-challenge_iz32LMCwnbxdQrNLmfCx5W.eval
provenance/original-v0.1/outputs/019f6106-4360-7303-9803-88d6a5fc5666/: prompt_inventory_v0_1.jsonl
provenance/original-v0.1/tests/: test_analyze_model_panel.py  test_epistemic_challenge.py  test_holdout_challenge.py
scripts/: reproduce_results.py
(+18 files in other folders)
