[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "epistemic-challenge-curves"
version = "0.1.0"
description = "Inspect scaffold for measuring LLM epistemic challenge thresholds"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "inspect-ai>=0.3.220,<0.4",
  "openai>=1.99.7",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
py-modules = ["adjudicate_splits", "adjudicate_splits_high_ceiling", "analyze_model_panel", "analyze_results", "automated_scoring", "build_holdout_inventory", "build_holdout_report", "build_model_extension_report", "build_replication_report", "build_report_artifact", "combine_replication", "epistemic_challenge", "holdout_challenge", "summarize_holdout", "summarize_model_extension", "summarize_replication", "validate_holdout_logs", "validate_model_extension"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
